@@ -400,7 +400,9 @@ class CItemPrototype extends CItemGeneral {
 				$objParams['output'] = $options['selectTriggers'];
 				$triggers = API::Trigger()->get($objParams);
 
-				if (!is_null($options['limitSelects'])) order_result($triggers, 'name');
+				if (!is_null($options['limitSelects'])) {
+					order_result($triggers, 'description');
+				}
 				foreach ($triggers as $triggerid => $trigger) {
 					unset($triggers[$triggerid]['items']);
 					$count = array();
